# minister

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/minister/: __init__.py
tests/: test_greeting.py
